Fix eye overlap on mobile: adjust spacing to 25%

--- a/css/rabbit.css
+++ b/css/rabbit.css
@@ -108,10 +108,10 @@
     }
 
     .left-eye-overlay {
-        left: 35%;
+        left: 25%;
     }
 
     .right-eye-overlay {
-        right: 35%;
+        right: 25%;
     }
 }
